--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .app-container {
   min-height: 100vh;
   width: 85%;
   margin: 0 auto;
-  background-color: rgb(241, 240, 240);
+  background-color: rgba(241, 238, 238, 0.664);
 }
