--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -1,7 +1,18 @@
+.nav {
+  width: 100%;
+  height: 8vh;
+  font-size: 20px;
+  font-weight: 100;
+  background-color: rgba(255, 255, 255, 0.76);
+  padding: 0px 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .search-container {
   height: 8vh;
-  background-color: white;
-
+  background-color: rgba(255, 255, 255, 0.76);
   display: flex;
   align-items: center;
   border: 1px solid gray;
@@ -12,10 +23,9 @@
 .search-form {
   width: 100%;
   border-radius: 10px;
-
-  box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.75);
-  -webkit-box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.75);
-  -moz-box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.75);
+  box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.562);
+  -webkit-box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.582);
+  -moz-box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.557);
 }
 
 .search-icon {
@@ -29,7 +39,82 @@
   height: 50px;
   border-radius: 10px;
   padding-left: 20px;
-
+  background-color: transparent;
   outline: none;
   border: none;
+}
+
+.new-note {
+  font-size: 18px;
+  font-weight: 600;
+  height: 8vh;
+  padding: 0px 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.new-note p {
+  cursor: pointer;
+}
+
+.new-note p span {
+  margin: 0px 10px;
+}
+
+.note-container {
+  padding: 0px 10px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-gap: 20px;
+}
+
+.note-card {
+  position: relative;
+  background-color: rgba(255, 255, 255, 0.76);
+  border-radius: 7px;
+  min-height: 250px;
+  padding: 20px 20px 30px;
+
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  font-weight: 500;
+  font-size: 23px;
+  margin-bottom: 5px;
+}
+
+.title i {
+  font-size: 10px;
+  color: teal;
+}
+
+hr {
+  padding: 0;
+  border: none;
+  border-top: medium double #c0bdbd;
+  color: #aaaaaa;
+  text-align: center;
+}
+
+hr:after {
+  content: "§";
+  display: inline-block;
+  position: relative;
+  top: -0.7em;
+  font-size: 1em;
+  padding: 0 0.25em;
+  background: #fff;
+}
+
+.del-btn {
+  position: absolute;
+  font-size: 19px;
+  right: 5%;
+  bottom: 1%;
+
+  cursor: pointer;
 }
