--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -72,9 +72,10 @@
 .note-card {
   position: relative;
   background-color: rgba(255, 255, 255, 0.76);
-  border-radius: 7px;
+  color: #3d3d3d;
   min-height: 250px;
   padding: 20px 20px 30px;
+  border-radius: 7px;
 
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -117,4 +118,73 @@ hr:after {
   bottom: 1%;
 
   cursor: pointer;
+}
+
+.add-container {
+  position: absolute;
+  width: 500px;
+  height: 350px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+
+  border: 1px solid rgb(197, 197, 197);
+  border-radius: 7px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  z-index: 999;
+}
+
+.title-field {
+  width: 100%;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: #3d3d3d;
+
+  padding: 0px 20px;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  border-bottom: 1px solid rgb(196, 196, 196);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  outline: none;
+}
+
+.text-field {
+  width: 100%;
+  height: 250px;
+  letter-spacing: 1px;
+  font-size: 20px;
+  border: none;
+  outline: none;
+}
+
+.showC {
+  display: block;
+}
+
+.hideC {
+  display: none;
+}
+
+#add-btn {
+  background-color: #04a1a1;
+  width: 100%;
+  height: 40px;
+  font-size: 20px;
+  font-weight: 600;
+  outline: none;
+  cursor: pointer;
+}
+
+#add-btn:hover {
+  background-color: #008080;
 }
