--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -161,8 +161,10 @@ hr:after {
 .text-field {
   width: 100%;
   height: 250px;
+  color: #3d3d3d;
   letter-spacing: 1px;
   font-size: 20px;
+  padding: 0px 20px;
   border: none;
   outline: none;
 }
