--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -2,12 +2,41 @@
   width: 100%;
   height: 8vh;
   font-size: 20px;
-  font-weight: 100;
   background-color: rgba(255, 255, 255, 0.76);
   padding: 0px 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.nav h3 {
+  color: #3d3d3d;
+  font-weight: 600;
+}
+
+.sign-in,
+.sign-out {
+  background-color: transparent;
+  padding: 7px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+}
+
+.sign-out {
+  margin-left: 10px;
+}
+
+#name-display {
+  border: none;
+}
+
+img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  transform: translateY(10px);
 }
 
 .search-container {
