--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -1,3 +1,10 @@
+.container {
+  min-height: 100vh;
+  width: 90%;
+  margin: 0 auto;
+  background-color: rgba(241, 238, 238, 0.664);
+}
+
 .nav {
   width: 100%;
   height: 8vh;
@@ -7,6 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 99;
 }
 
 .nav h3 {
@@ -22,6 +30,7 @@
   border-radius: 5px;
   outline: none;
   cursor: pointer;
+  z-index: 99;
 }
 
 .sign-in:hover,
@@ -53,6 +62,7 @@ img {
   border: 1px solid gray;
   border-radius: 10px;
   margin-bottom: 10px;
+  z-index: 99;
 }
 
 .search-form {
@@ -61,6 +71,7 @@ img {
   box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.562);
   -webkit-box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.582);
   -moz-box-shadow: -4px 5px 5px 0px rgba(184, 176, 176, 0.557);
+  z-index: 99;
 }
 
 .search-icon {
@@ -124,7 +135,7 @@ img {
 }
 
 .title i {
-  font-size: 10px;
+  font-size: 7px;
   color: teal;
 }
 
