--- a/src/css/Style.css
+++ b/src/css/Style.css
@@ -18,7 +18,7 @@
 }
 
 .nav h3 {
-  color: #3d3d3d;
+  color: #535353;
   font-weight: 600;
 }
 
@@ -46,6 +46,7 @@
 #name-display {
   border: none;
   background-color: transparent;
+  color: #3d3d3d;
 }
 
 img {
